--- a/index.html
+++ b/index.html
@@ -1,131 +1,68 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Genre Translation</title>
-	<link href="style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit">
-<style>
-
-	#BusR {
-		display: inline-block;
-		margin-left: 100px;
-		background-color: beige;
-		border: 5px solid black;
-		margin-top: 30px;
-		margin-right: 100px;
-	}
-	#RailR {
-		display: inline-block;
-		margin-left: 100px;
-		background-color: beige;
-		border: 5px solid black;
-		margin-top: 50px;
-		margin-right: 30px;
-	}
-	#content {
-		width: 90%;
-		background-color: darkred;
-		margin: 0 auto;
-	}
-	#info p {
-		padding: 10px 50px;
-		text-align: center;
-		margin: 0px;
-	}
-	.busRoutes {
-		height: 917px;
-		margin-bottom: 0;
-	}
-	.Header {
-		margin: 0 auto;
-		text-align: center;
-		font-size: 25px;
-		margin-top: 0px;
-		width: 400px;
-		padding: 0px;
-	}
-	.Bus img{
-		width: 1100px;
-		height: auto;
-		padding: 0px;
-		position: relative;
-	}
-	#info {
-		background-color: burlywood;
-		font-size: 20px;
-		font-family: Kanit, sans-serif;
-		margin: 0px;
-		padding: 0px;
-		border: 5px solid black;
-		margin-top: 20px;
-	}
-	#break {
-		height: 100px;
-	}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dashiell Curran</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
 
-</style>
+    <style>
 
-</head>
+    .b-example-divider {
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
 
-<body>
-<div id="title">
-	<h1>LA's Public Transit Problem</h1>
-</div>
+    .b-example-vr {
+      flex-shrink: 0;
+      width: 1.5rem;
+      height: 100vh;
+    }
 
-<div id="nav-wrapper">
-	<div id="nav">
-		<ul>
-		<li><a href="index.html" class="active">The Metro</a>
-			<ul>
-				<li><a href="index.html#info">Information</a></li>
-				<li><a href="index.html#BusR">Bus Routes</a></li>
-				<li><a href="index.html#RailR">Rail Routes</a></li>
-			</ul>
-		</li>
-		<li><a href="problem.html">Why It Isn't Working</a>
-			<ul>
-				<li><a href="problem.html#content">Stigmatization</a></li>
-				<li><a href="problem.html#E">Fare Evasion</a></li>
-			</ul>
-		</li>
-		<li><a href="benefits.html">The Benefits</a>
-		</li>
-		<li><a href="done.html">What Must Be Done</a>
-	</ul>
-	</div>
-</div>
-<div id="content">
-
-<div id="info">
-	<p>The Los Angeles County Metropolitan Transportation Authority, more commonly known as Metro, is the agency that deals with the majority of public transit operations in LA. The company utilizes two modes of transportation: buses and railways. The bus system includes 12,088 stops and 121 routes stretching across 1,447 square miles (<a href="https://www.metro.net/about/facts-glance/" target="_blank">“Metro Facts at a Glance”</a>). The rail system includes seven different lines providing over 100 miles of service, with new additions constantly planned and constructed. The K line, for example, was opened for the first time in October 2022. Before that, Metro opened the E line in May 2016. The agency employs over 9,800 people, making it one of the region’s largest employers (<a href="https://www.metro.net/about/facts-glance/" target="_blank">“Metro Facts at a Glance”</a>). The high use of and demand for Metro’s operations makes it the nation’s third-largest transit company by ridership. But all of this doesn’t mean that it is perfect. Despite its successes, the company still has room for improvement.
- </p> 
-</div>
-<div id="photo">
-<div id="BusR">
-	<div class="Header">
-		<h3>Map of Bus Routes:</h3>
-	</div>
-	<div class="busRoutes">
-		<div class="Bus">
-			<img src="bus.png" alt="Bus Routes!">
-		</div>
-	</div>
-</div>
-<div id="RailR">
-	<div class="Header">
-		<h3>Map of Rail Routes:</h3>
-	</div>
-	<div class="railRoutes">
-		<div class="Bus">
-			<img src="rail.png" alt="Rail Routes!">
-		</div>
-	</div>
-</div>
-</div>
-</div>
-</div>
-</body>
+    body {
+      font-family: 'Source Sans 3', sans-serif; 
+    }
 
 
+    </style>
+  </head>
+
+  <body>
+    
+  	<div class="b-example-divider"></div>
+
+  <div class="container">
+    <header class="d-flex justify-content-center py-3">
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="index.html" class="nav-link active">About Me</a></li>
+        <li class="nav-item"><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li class="nav-item"><a href="resume.html" class="nav-link">Resume</a></li>
+        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+      </ul>
+    </header>
+  </div>
+
+  <div class="container mt-4">
+      <div class="row align-items-center">
+        <!-- Photo column -->
+        <div class="col-md-4">
+          <img src="img/headshot.png" class="img-fluid rounded-circle" alt="Dash Curran">
+        </div>  
+        <!-- Text column -->
+        <div class="col-md-8">
+          <h2>Dash Curran</h2>
+          <p>
+            Here's a little about me. [Insert bio here]
+          </p>
+        </div>
+      </div>
+    </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </body>
 </html>
