--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,8 @@
       background-color: #f8f9fa; 
       border-radius: 15px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+      height: 290px;
+      align-items: center;
     }
 
     .portfolio-image {
@@ -42,7 +44,7 @@
 
     #magnetrophy
     {
-      background-color: #FABFBF;
+      background-color: #ffada9;
     }
 
     #skyward_adventure
@@ -55,13 +57,21 @@
       background-color: #E3DCFD;
     }
 
-    #joestable
+    #dashstable
     {
       background-color: #F5FDDC;
     }
 
     body {
       font-family: 'Source Sans 3', sans-serif; 
+    }
+    h3 {
+      font-size: 32px;
+      margin-left: 10px;
+    }
+    a {
+      text-decoration: none;
+      color: black;
     }
   </style>
 </head>
@@ -80,59 +90,54 @@
   </header>
 
   <!-- First box for Merilla's Memories -->
+  <a href="merillas_memories.html">
   <div class="portfolio-box" id="merillas_memories">
-    <a href="merillas_memories.html">
       <img src="img/merilla.jpeg" alt="Merilla's Memories" class="portfolio-image">
-    </a>
     <div class="portfolio-description">
       <h3>Merilla's Memories</h3>
-      <p>Description of the Merilla's Memories project.</p>
     </div>
   </div>
+</a>
 
   <!-- Second box for Magnetrophy -->
+  <a href="magnetrophy.html">
   <div class="portfolio-box" id="magnetrophy">
-    <a href="magnetrophy.html">
-      <img src="img/merilla.jpeg" alt="Magnetrophy" class="portfolio-image">
-    </a>
+      <img src="img/magnetrophy.png" alt="Magnetrophy" class="portfolio-image">
     <div class="portfolio-description">
       <h3>Magnetrophy</h3>
-      <p>Description of the Magnetrophy project.</p>
     </div>
   </div>
+</a>
 
   <!-- Third box for Skyward Adventure -->
-  <div class="portfolio-box" id="skyward_adventure">
     <a href="skyward_adventure.html">
-      <img src="img/merilla.jpeg" alt="Skyward Adventure" class="portfolio-image">
-    </a>
+  <div class="portfolio-box" id="skyward_adventure">
+      <img src="img/skyward.png" alt="Skyward Adventure" class="portfolio-image">
     <div class="portfolio-description">
       <h3>Skyward Adventure</h3>
-      <p>Description of the Skyward Adventure project.</p>
     </div>
   </div>
+</a>
 
   <!-- Fourth box for ITP 380 Showreel -->
+      <a href="showreel.html">
   <div class="portfolio-box" id="itp_380_showreel">
-    <a href="itp_380_showreel.html">
-      <img src="img/merilla.jpeg" alt="ITP 380 Showreel" class="portfolio-image">
-    </a>
-    <div class="portfolio-description">
+      <img src="img/showreel.png" alt="ITP 380 Showreel" class="portfolio-image">
+     <div class="portfolio-description">
       <h3>ITP 380 Showreel</h3>
-      <p>Description of the ITP 380 Showreel project.</p>
     </div>
   </div>
+</a>
 
-  <!-- Fifth box for JoesTable Website -->
-  <div class="portfolio-box" id="joestable">
-    <a href="joestable.html">
-      <img src="img/merilla.jpeg" alt="JoesTable Website" class="portfolio-image">
-    </a>
+  <!-- Fifth box for DashsTable Website -->
+      <a href="dashstable.html">
+  <div class="portfolio-box" id="dashstable">
+      <img src="img/website.png" alt="DashsTable Website" class="portfolio-image">
     <div class="portfolio-description">
-      <h3>JoesTable Website</h3>
-      <p>Description of the JoesTable Website project.</p>
+      <h3>DashsTable Website</h3>
     </div>
   </div>
+</a>
 
 </div>
 
