--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     body {
       font-family: 'Source Sans 3', sans-serif; 
     }
+    .col-md-8 {
+      width: 50%;
+    }
 
 
     </style>
@@ -57,7 +60,7 @@
         <div class="col-md-8">
           <h2>Dash Curran</h2>
           <p>
-            Here's a little about me. [Insert bio here]
+            I am a 20-year-old, hardworking, and enthusiastic college student working towards a B.S. in Computer Science Games at the University of Southern California.
           </p>
         </div>
       </div>
