--- a/magnetrophy.html
+++ b/magnetrophy.html
@@ -38,7 +38,7 @@
         text-decoration: none; 
     }
     body {
-      background-color: #FFAFAC;
+      background-color: #ffada9;
       font-family: 'Source Sans 3', sans-serif; 
     }
     .game-info, .game-description {
@@ -47,7 +47,6 @@
       border-radius: 8px;
       margin-bottom: 20px;
       width: 100%;
-      text-align: center;
     }
     .game-info p {
       font-size: 24px;
@@ -85,6 +84,13 @@
     #board {
       margin-top: 20px;
     }
+    .game-info {
+      text-align: center;
+    }
+    #media {
+      width: 70%;
+      margin: 0 auto;
+    }
   </style>
 </head>
 <body>
@@ -99,9 +105,8 @@
         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
       </ul>
     </header>
-
-    <div class="centered-content">
-      <div class="game-info">
+      <div class="centered-content">
+      <div class="game-info"> 
         <h1>Magnetrophy</h1>
         <p>Developed in: Unreal Engine 5</p>
         <p>Status: In Progress...</p>
@@ -112,28 +117,18 @@
       </div>
     </div>
 
+
           <div class ="centered-content">
       <div class ="title">
         <h1> The Video Game</h1>
       </div>
     </div>
-     
-    <div class="centered-content1">
-      <div class="image-row row justify-content-center">
-        <div class="col-md-6">
-<img src="img/merilla1.png" alt="Merilla's Memories 1" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
-        </div>
-        <div class="col-md-6">
-<img src="img/merilla2.png" alt="Merilla's Memories 1" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
-        </div>
-      </div>
-      <div class="image-row row justify-content-center">
-        <div class="col-md-6">
-<img src="img/merilla3.png" alt="Merilla's Memories 1" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
-        </div>
-        <div class="col-md-6">
-<img src="img/merilla4.png" alt="Merilla's Memories 1" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
-        </div>
+     <div id="media">
+          <div class="video-container">
+        <video width="100%" autoplay loop muted class="img-fluid">
+          <source src="magnetrophy.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
       <div class ="centered-content">
       <div class ="title" id="board">
@@ -158,21 +153,9 @@
 <img src="img/magnet4.jpeg" alt="Magnetrophy 4" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
         </div>
       </div>
-
+</div>
       </div>
 
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content" style="background-color: transparent; border: none;">
-          <div class="modal-body" style="padding: 0;">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="position: absolute; right: 10px; top: 10px; z-index: 100;"></button>
-            <img id="modalImage" src="" class="img-fluid" alt="Enlarged image" />
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
