--- a/merillas_memories.html
+++ b/merillas_memories.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <style>
-    img {
+    img, video {
       width: 100%;
       height: auto;
       margin-top: 20px;
@@ -30,7 +30,8 @@
         border-radius: 5px; 
         transition: color 0.3s, background-color 0.3s; 
         display: inline-block; 
-        margin-top: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
     #link:hover {
         color: #ffffff; 
@@ -73,6 +74,9 @@
     opacity: 0.5; 
     background-color: #000; 
     }
+    .game-info{
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -89,14 +93,14 @@
     </header>
 
     <div class="centered-content">
-      <div class="game-info">
+      <div class="game-info"> 
         <h1>Merilla's Memories</h1>
         <p>Developed in: Unity</p>
         <p>Status: Complete</p>
       </div>
 
       <div class="game-description">
-        <p>Merilla's Memories is a casual and cozy 2D game that follows a mermaid named Merilla and her whale friend, Willow. This game was made in eighteen days by an awesome team of nine people worldwide as a part of the Climate Change Video Game Jam 2024.</p>
+        <p>Merilla's Memories is a casual and cozy 2D game that follows a mermaid named Merilla and her whale friend, Willow. This game was made in eighteen days by an awesome team of nine people worldwide as a part of the <a href="https://itch.io/jam/climate-change-game-jam"> Climate Change Video Game Jam 2024. </a></p>
       </div>
 
       <a href="https://cswen29.itch.io/merillas-memories" id="link">Play the game!</a>
