--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
     </header>
 
   <div class="text-center"> 
-     <a href="img/2024_Resume.png" download="filename.ext">
+     <a href="img/Resume.png" download="filename.ext">
         <img src="img/2024_Resume.png" alt="resume" style="width: 70%; height: auto;"> 
       </a>
     </div> 
