--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
 
   <div class="text-center"> 
      <a href="img/Resume.png" download="filename.ext">
-        <img src="img/2024_Resume.png" alt="resume" style="width: 70%; height: auto;"> 
+        <img src="img/Resume.png" alt="resume" style="width: 70%; height: auto;"> 
       </a>
     </div> 
 
