--- a/index.html
+++ b/index.html
@@ -4,68 +4,115 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dashiell Curran</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;500;700&family=Source+Sans+3:wght@300;600;900&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
     <style>
-
-    .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      body {
+        font-family: 'Source Sans 3', sans-serif;
+        background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+        color: #212529;
+        margin: 0;
+        padding: 0;
       }
 
-    .b-example-vr {
-      flex-shrink: 0;
-      width: 1.5rem;
-      height: 100vh;
-    }
+      header {
+        background-color: #ffffff;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+      }
 
-    body {
-      font-family: 'Source Sans 3', sans-serif; 
-    }
-    .col-md-8 {
-      width: 50%;
-    }
+      .nav-link {
+        font-weight: 600;
+        font-size: 1.1rem;
+        color: #495057;
+      }
 
+      .nav-link.active {
+        color: #ffffff !important;
+        background-color: #0d6efd;
+      }
 
+      .hero {
+        padding: 4rem 0;
+        text-align: center;
+      }
+
+      .hero-img {
+        width: 180px;
+        height: 180px;
+        object-fit: cover;
+        border-radius: 50%;
+        box-shadow: 0 0 0 6px #ffffff, 0 0 20px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease;
+      }
+
+      .hero-img:hover {
+        transform: scale(1.05);
+      }
+
+      .hero h1 {
+        font-family: 'Kanit', sans-serif;
+        font-weight: 700;
+        font-size: 2.5rem;
+        margin-top: 1rem;
+      }
+
+      .hero p {
+        max-width: 600px;
+        margin: 1rem auto 1.5rem;
+        font-size: 1.2rem;
+        line-height: 1.6;
+        color: #495057;
+      }
+
+      .resume-button {
+        font-size: 1rem;
+        padding: 0.5rem 1.25rem;
+        border-radius: 30px;
+        font-weight: 600;
+      }
+
+      .fade-in {
+        animation: fadeInUp 1s ease-in-out;
+      }
+
+      @keyframes fadeInUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
     </style>
   </head>
 
   <body>
     
-  	<div class="b-example-divider"></div>
+    <div id="navbar-container"></div>
 
-  <div class="container">
-    <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link active">About Me</a></li>
-        <li class="nav-item"><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-        <li class="nav-item"><a href="resume.html" class="nav-link">Resume</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-      </ul>
-    </header>
-  </div>
-
-  <div class="container mt-4">
-      <div class="row align-items-center">
-        <!-- Photo column -->
-        <div class="col-md-4">
-          <img src="img/headshot.png" class="img-fluid rounded-circle" alt="Dash Curran">
-        </div>  
-        <!-- Text column -->
-        <div class="col-md-8">
-          <h2>Dash Curran</h2>
-          <p>
-            I am a 20-year-old, hardworking, and enthusiastic college student working towards a B.S. in Computer Science Games at the University of Southern California.
-          </p>
-        </div>
-      </div>
+    <div class="container hero fade-in">
+      <img src="img/headshot.png" class="hero-img" alt="Dash Curran">
+      <h1>Dash Curran</h1>
+      <p>
+        I am a 21-year-old, hardworking, and enthusiastic college student working towards a B.S. in Computer Science Games at the University of Southern California.
+      </p>
+      <a href="img/Resume.png" target="_blank" class="btn btn-primary resume-button">Download Resume</a>
     </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <div id="footer-container"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="js/navlogic.js"></script>
+    <script src="js/footerlogic.js"></script>
+
   </body>
 </html>
