--- a/portfolio.html
+++ b/portfolio.html
@@ -4,16 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+
   <style>
-    .b-example-divider {
-      height: 3rem;
-      background-color: rgba(0, 0, 0, .1);
-      border: solid rgba(0, 0, 0, .15);
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-    }
 
     .portfolio-box {
       display: flex;
@@ -77,70 +73,65 @@
 </head>
 <body>
 
-<div class="b-example-divider"></div>
+  <div id="navbar-container"></div>
 
-<div class="container">
-  <header class="d-flex justify-content-center py-3">
-    <ul class="nav nav-pills">
-      <li class="nav-item"><a href="index.html" class="nav-link">About Me</a></li>
-      <li class="nav-item"><a href="portfolio.html" class="nav-link active">Portfolio</a></li>
-      <li class="nav-item"><a href="resume.html" class="nav-link">Resume</a></li>
-      <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-    </ul>
-  </header>
 
-  <!-- First box for Merilla's Memories -->
-  <a href="merillas_memories.html">
-  <div class="portfolio-box" id="merillas_memories">
-      <img src="img/merilla.jpeg" alt="Merilla's Memories" class="portfolio-image">
-    <div class="portfolio-description">
-      <h3>Merilla's Memories</h3>
+    <!-- Merilla's Memories -->
+    <a href="portfolio/merillas_memories.html">
+    <div class="portfolio-box" id="merillas_memories">
+        <img src="img/merilla.jpeg" alt="Merilla's Memories" class="portfolio-image">
+      <div class="portfolio-description">
+        <h3>Merilla's Memories</h3>
+      </div>
     </div>
-  </div>
-</a>
+  </a>
 
-  <!-- Second box for Magnetrophy -->
-  <a href="magnetrophy.html">
-  <div class="portfolio-box" id="magnetrophy">
-      <img src="img/magnetrophy.png" alt="Magnetrophy" class="portfolio-image">
-    <div class="portfolio-description">
-      <h3>Magnetrophy</h3>
+    <!-- Magnetrophy -->
+    <a href="portfolio/magnetrophy.html">
+    <div class="portfolio-box" id="magnetrophy">
+        <img src="img/magnetrophy.png" alt="Magnetrophy" class="portfolio-image">
+      <div class="portfolio-description">
+        <h3>Magnetrophy</h3>
+      </div>
     </div>
-  </div>
-</a>
+  </a>
 
-  <!-- Third box for Skyward Adventure -->
-    <a href="skyward_adventure.html">
-  <div class="portfolio-box" id="skyward_adventure">
-      <img src="img/skyward.png" alt="Skyward Adventure" class="portfolio-image">
-    <div class="portfolio-description">
-      <h3>Skyward Adventure</h3>
+    <!-- Skyward Adventure -->
+      <a href="portfolio/skyward_adventure.html">
+    <div class="portfolio-box" id="skyward_adventure">
+        <img src="img/skyward.png" alt="Skyward Adventure" class="portfolio-image">
+      <div class="portfolio-description">
+        <h3>Skyward Adventure</h3>
+      </div>
     </div>
-  </div>
-</a>
+  </a>
 
-  <!-- Fourth box for ITP 380 Showreel -->
-      <a href="showreel.html">
-  <div class="portfolio-box" id="itp_380_showreel">
-      <img src="img/showreel.png" alt="ITP 380 Showreel" class="portfolio-image">
-     <div class="portfolio-description">
-      <h3>ITP 380 Showreel</h3>
+    <!-- ITP 380 Showreel -->
+        <a href="portfolio/showreel.html">
+    <div class="portfolio-box" id="itp_380_showreel">
+        <img src="img/showreel.png" alt="ITP 380 Showreel" class="portfolio-image">
+      <div class="portfolio-description">
+        <h3>ITP 380 Showreel</h3>
+      </div>
     </div>
-  </div>
-</a>
+  </a>
 
-  <!-- Fifth box for DashsTable Website -->
-      <a href="dashstable.html">
-  <div class="portfolio-box" id="dashstable">
-      <img src="img/website.png" alt="DashsTable Website" class="portfolio-image">
-    <div class="portfolio-description">
-      <h3>DashsTable Website</h3>
+    <!-- DashsTable Website -->
+        <a href="portfolio/dashstable.html">
+    <div class="portfolio-box" id="dashstable">
+        <img src="img/website.png" alt="DashsTable Website" class="portfolio-image">
+      <div class="portfolio-description">
+        <h3>DashsTable Website</h3>
+      </div>
     </div>
-  </div>
-</a>
+  </a>
 
-</div>
+  <div id="footer-container"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+  <script src="js/navlogic.js"></script>
+  <script src="js/footerlogic.js"></script>
+
 </body>
 </html>
