--- a/portfolio/dashstable.html
+++ b/portfolio/dashstable.html
@@ -3,24 +3,28 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Magnetrophy - Portfolio</title>
+  <title>DashsTable - Portfolio</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link href="../style.css" rel="stylesheet">
+
   <style>
-    img, video {
-      width: 100%;
-      height: auto;
-      margin: 10px 0px;
-      border: 2px solid black;
-    }
+    img {
+  height: auto;
+  margin: 10px 0px;
+  border: 2px solid black;
+  max-width: 100%;
+}
+
+video {
+  width: 100%;
+  height: auto;
+  margin: 10px 0px;
+  border: 2px solid black;
+}
+
     
-    .b-example-divider {
-      height: 3rem;
-      background-color: rgba(0, 0, 0, .1);
-      border: solid rgba(0, 0, 0, .15);
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-    }
     #link {
         text-decoration: none; 
         font-size: 24px; 
@@ -57,10 +61,6 @@
     .centered-content {
       margin: 0 auto;
       width: 60%; 
-      align-items: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
     }
     .centered-content1 {
   display: flex;
@@ -87,20 +87,17 @@
       text-align: center;
     }
 
+    .row {
+  flex-direction: row !important;
+  flex-wrap: wrap !important;
+}
+
   </style>
 </head>
 <body>
-  <div class="b-example-divider"></div>
+  <div id="navbar-container"></div>
 
   <div class="container">
-    <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link">About Me</a></li>
-        <li class="nav-item"><a href="portfolio.html" class="nav-link active">Portfolio</a></li>
-        <li class="nav-item"><a href="resume.html" class="nav-link">Resume</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-      </ul>
-    </header>
 
     <div class="centered-content">
       <div class="game-info">
@@ -118,68 +115,68 @@
 
           <iframe width="900" height="506" src="https://www.youtube.com/embed/EIJDxRHIvYo?si=pXLOxA4I-umXcaZh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-      <div class="image-row row justify-content-center">
+      <div class="row">
         <div class="col-md-6">
-<img src="img/website1.png" alt="Website 1" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
+<img src="../img/website1.png" alt="Website 1" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
         </div>
         <div class="col-md-6">
-<img src="img/website2.png" alt="Website 2" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
+<img src="../img/website2.png" alt="Website 2" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
         </div>
       </div>
-      <div class="image-row row justify-content-center">
+      <div class="row">
         <div class="col-md-6">
-<img src="img/website3.png" alt="Website 3" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
+<img src="../img/website3.png" alt="Website 3" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
         </div>
         <div class="col-md-6">
-<img src="img/website4.png" alt="Website 4" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
+<img src="../img/website4.png" alt="Website 4" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
         </div>
       </div>
 
-      <div class="image-row row justify-content-center">
+      <div class="row">
         <div class="col-md-6">
-<img src="img/website5.png" alt="Website 5" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
+<img src="../img/website5.png" alt="Website 5" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
         </div>
         <div class="col-md-6">
-<img src="img/website6.png" alt="Website 6" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
+<img src="../img/website6.png" alt="Website 6" class="img-fluid image-enlargeable" data-bs-toggle="modal" data-bs-target="#imageModal">
         </div>
       </div>
     </div>
 
     <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content" style="background-color: transparent; border: none;">
           <div class="modal-body" style="padding: 0;">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="position: absolute; right: 10px; top: 10px; z-index: 100;"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             <img id="modalImage" src="" class="img-fluid" alt="Enlarged image" />
           </div>
         </div>
       </div>
     </div>
 
-  </div>
   
+  <div id="footer-container"></div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var modalImage = document.getElementById('modalImage');
+      var imageEnlargeables = document.querySelectorAll('.image-enlargeable');
 
+      imageEnlargeables.forEach(function (image) {
+        image.addEventListener('click', function () {
+          modalImage.src = this.src;
+        });
+      });
 
- <script>
-  document.addEventListener('DOMContentLoaded', function () {
-    var modalImage = document.getElementById('modalImage');
-    var imageEnlargeables = document.querySelectorAll('.image-enlargeable');
-
-    imageEnlargeables.forEach(function (image) {
-      image.addEventListener('click', function () {
-        modalImage.src = this.src; // Set the src of the modal image to the clicked image
+      modalImage.addEventListener('click', function () {
+        var imageModal = bootstrap.Modal.getInstance(document.getElementById('imageModal'));
+        imageModal.hide();
       });
     });
+  </script>
 
-    // Close modal when clicking on the image
-    modalImage.addEventListener('click', function () {
-      var imageModal = bootstrap.Modal.getInstance(document.getElementById('imageModal'));
-      imageModal.hide();
-    });
-  });
-</script>
-
+<script src="../js/navlogic.js"></script>
+<script src="../js/footerlogic.js"></script>
 
 </body>
 </html>
