--- a/portfolio/showreel.html
+++ b/portfolio/showreel.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Merilla's Memories - Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link href="../style.css" rel="stylesheet">
+
   <style>
     img {
       width: 100%;
@@ -14,13 +16,6 @@
       border: 2px solid black;
     }
     
-    .b-example-divider {
-      height: 3rem;
-      background-color: rgba(0, 0, 0, .1);
-      border: solid rgba(0, 0, 0, .15);
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-    }
     #link {
         text-decoration: none; 
         font-size: 24px; 
@@ -83,18 +78,10 @@
   </style>
 </head>
 <body>
-  <div class="b-example-divider"></div>
+
+  <div id="navbar-container"></div>
 
   <div class="container">
-    <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link">About Me</a></li>
-        <li class="nav-item"><a href="portfolio.html" class="nav-link active">Portfolio</a></li>
-        <li class="nav-item"><a href="resume.html" class="nav-link">Resume</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-      </ul>
-    </header>
-
     <div class="centered-content">
       <div class="game-info">
         <h1>ITP 380 Showreel</h1>
@@ -124,7 +111,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content" style="background-color: transparent; border: none;">
           <div class="modal-body" style="padding: 0;">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="position: absolute; right: 10px; top: 10px; z-index: 100;"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             <img id="modalImage" src="" class="img-fluid" alt="Enlarged image" />
           </div>
         </div>
@@ -135,25 +122,29 @@
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
+  <div id="footer-container"></div>
 
- <script>
-  document.addEventListener('DOMContentLoaded', function () {
-    var modalImage = document.getElementById('modalImage');
-    var imageEnlargeables = document.querySelectorAll('.image-enlargeable');
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var modalImage = document.getElementById('modalImage');
+      var imageEnlargeables = document.querySelectorAll('.image-enlargeable');
 
-    imageEnlargeables.forEach(function (image) {
-      image.addEventListener('click', function () {
-        modalImage.src = this.src; // Set the src of the modal image to the clicked image
+      imageEnlargeables.forEach(function (image) {
+        image.addEventListener('click', function () {
+          modalImage.src = this.src; // Set the src of the modal image to the clicked image
+        });
+      });
+
+      // Close modal when clicking on the image
+      modalImage.addEventListener('click', function () {
+        var imageModal = bootstrap.Modal.getInstance(document.getElementById('imageModal'));
+        imageModal.hide();
       });
     });
+  </script>
 
-    // Close modal when clicking on the image
-    modalImage.addEventListener('click', function () {
-      var imageModal = bootstrap.Modal.getInstance(document.getElementById('imageModal'));
-      imageModal.hide();
-    });
-  });
-</script>
+<script src="../js/navlogic.js"></script>
+<script src="../js/footerlogic.js"></script>
 
 
 </body>
