--- a/resume.html
+++ b/resume.html
@@ -4,20 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resume</title>
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+
   <style>
     img {
       width: 70%;
       height: auto;
-    }
-    
-    .b-example-divider {
-      height: 3rem;
-      background-color: rgba(0, 0, 0, .1);
-      border: solid rgba(0, 0, 0, .15);
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
     }
 
     .b-example-vr {
@@ -30,30 +25,29 @@
       font-family: 'Source Sans 3', sans-serif; 
     }
 
-
+    img.no-hover:hover {
+      transform: none;
+      box-shadow: none;
+      cursor: default;
+    }
 
   </style>
 </head>
 <body>
 
-    <div class="b-example-divider"></div>
-
-  <div class="container">
-    <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link">About Me</a></li>
-        <li class="nav-item"><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-        <li class="nav-item"><a href="resume.html" class="nav-link active">Resume</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-      </ul>
-    </header>
+  <div id="navbar-container"></div>
 
   <div class="text-center"> 
-     <a href="img/Resume.png" download="filename.ext">
-        <img src="img/Resume.png" alt="resume" style="width: 70%; height: auto;"> 
-      </a>
+     <a href="img/Resume May 2025.png" download="Dashiell_Curran_Resume.png">
+      <img src="img/Resume May 2025.png" alt="resume" class="no-hover" style="width: 70%; height: auto;">
+    </a>
     </div> 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <div id="footer-container"></div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> 
+  <script src="js/navlogic.js"></script>
+  <script src="js/footerlogic.js"></script>
+
 </body>
 </html>
