Updated resume link

--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
   <div id="navbar-container"></div>
 
   <div class="text-center"> 
-     <a href="img/Resume May 2025.png" download="Dashiell_Curran_Resume.png">
+     <a href="img/Resume 2025.pdf" download="Dashiell_Curran_Resume.pdf">
       <img src="img/Resume May 2025.png" alt="resume" class="no-hover" style="width: 70%; height: auto;">
     </a>
     </div> 
