--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <p>
         I am a 21-year-old, hardworking, and enthusiastic college student working towards a B.S. in Computer Science Games at the University of Southern California.
       </p>
-      <a href="img/Resume.png" target="_blank" class="btn btn-primary resume-button">Download Resume</a>
+      <a href="img/Resume 2025.pdf" target="_blank" class="btn btn-primary resume-button">Download Resume</a>
     </div>
 
     <div id="footer-container"></div>
