--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
       <img src="img/headshot.png" class="hero-img" alt="Dash Curran">
       <h1>Dash Curran</h1>
       <p>
-        I am a 21-year-old, hardworking, and enthusiastic college student working towards a B.S. in Computer Science Games at the University of Southern California.
+        <strong>I am a 21-year-old, hardworking, and enthusiastic college student working towards a B.S. in Computer Science Games at the University of Southern California.</strong>
       </p>
-      <a href="img/Resume 2025.pdf" target="_blank" class="btn btn-primary resume-button">Download Resume</a>
+      <a href="img/Resume 2025.pdf" download="Dashiell_Curran_Resume.pdf" target="_blank" class="btn btn-primary resume-button">Download Resume</a>
     </div>
 
     <div id="footer-container"></div>
